# BFM

./: README.md
bagel/: AUTHORS  COPYING  ChangeLog  bagel-config.in  configure.ac
bagel/.svn/: entries
bagel/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  NEWS.svn-base  README.svn-base  bagel-config.in.svn-base  configure.svn-base
bagel/autom4te.cache/: output.1  traces.0
bagel/autom4te.cache/.svn/: entries
bagel/config/.svn/: entries
bagel/lib/: #mic.h#  Makefile.in  alpha064.C  alpha164.C  alpha164_single.C  alpha264.h  alpha264_single.C  arralloc.C  bagel_int.h.in  bgl.C  bgq.C  dump.C  mic.C  powerIII.C  powerpc.C  powerpc_single.C  prefetch.C  prefetch.h  processor.C  processor.h  queue_complex.C  registers.C  schedule.C  setarch.C  stack.C  stream.C  unknown.C  unknown.h  usparc.h  usparcII_single.C
bagel/lib/.svn/: entries
bfm/: AUTHORS  COPYING  Make.bgq  Makefile.am  Makefile.in  configure  configure.ac  confs
bfm/autom4te.cache/: output.1  requests  traces.0  traces.1
bfm/bfm/: BfmHDCG.C  BfmHDCG.h  Makefile.am  Makefile.in  bagel_int.h.in  bfm.h  bfmActionParams.h  bfm_block.C  bfm_cg.h  bfm_cg_mixed_prec.C  bfm_cg_mixed_prec.h  bfm_cg_multi.h  bfm_cg_multi_debug.h  bfm_cg_unprec.h  bfm_chebyshev.h  bfm_deprecated.h  bfm_eigcg.h  bfm_gcr.h  bfm_hdcg_wrapper.h  bfm_import_export.h  bfm_iroiro.h  bfm_linalg.h  bfm_malloc.C  bfm_mcr.h  bfm_mcr_step.h  bfm_memalign.C  bfm_mprec.h  bfm_options.h.in  bfm_qalloc.C  bfm_qdp.C  bfm_qdp.h  bfm_qdp_cayley_prec.h  bfm_qdp_chroma_linop.h  bfm_qdp_dwf.h  bfm_qdp_dwf_gminus2.h  bfm_qdp_g5d.h  bfm_qdp_generic.h  bfm_qdp_generic.h.pthread  bfm_qdp_wilson.h  bfm_qdp_wilson_tm.h  (+108 more)
bfm/bfm/eigen/: Krylov.h  Krylov_4d.h  Krylov_5d.h  Matrix.h  dwf_4d.h
bfm/code_gen/: Makefile.am  Makefile.in  bgl_decom.C  bgl_recon.C  mic_dwf.C  mic_dwf.C.1  mic_dwf.C.2  mic_dwf.C.4  mic_dwf.C.lebesgue  qcdoc_decom.C  qcdoc_recon.C  qpx_deriv.C  qpx_dwf.C  qpx_dwf.C.mic.123gf  qpx_dwf.C.mic.48gf  qpx_dwf_comms.C  qpx_dwf_singlepass.C  vmx_cayley.C  vmx_cayley_inv.C  vmx_cg.C  vmx_clov_apply.C  vmx_dperp.C  vmx_dwf.C  vmx_dwf_new.C  vmx_gather.C  vmx_gather_proj.C  vmx_merge.C  vmx_scatter.C  vmx_tmass.C  write_1pg5axpy.C  write_caxpy.C  write_face_scatter.C  write_inner.C  write_vaxpy.C  write_vaxpy_norm.C  write_vaxpy_ssp.C  write_vmx_vaxpy_norm.C
bfm/tests/: Makefile.am  Makefile.in
bfm/tests/BfmMultiGrid/: BfmMultiGrid.C  Makefile.am  Makefile.in  blas_complex_invert.c  call_dslash.C  call_dslash.C.pab  call_dslash.C.sav  call_dslash.C.tmp  qpx_zgemv.C  testLittleDiracOp.C
bfm/tests/BfmMultiGridDev/: Makefile.am  Makefile.in  TestBfmMultiGrid.C  blas_complex_invert.c  bmark.c
bfm/tests/benchmark/: Makefile.in  call_dslash.C
bfm/tests/clover/: Makefile.in  call_dslash.C  call_dslash.V1
bfm/tests/clover_cg/: Makefile.in  call_dslash.C
bfm/tests/clover_threaded/: Makefile.in  call_dslash.C  call_dslash_V1.C
bfm/tests/dwf_4d_bulk/: Makefile.in  call_dslash.C
bfm/tests/dwf_4d_mres/: Makefile.am  Makefile.in  call_dslash.C
bfm/tests/dwf_4d_operator/: Makefile.in  call_dslash.C
bfm/tests/dwf_cg/: Makefile.in  call_dslash.C  call_dslash.C.original
bfm/tests/dwf_cg_fpga/: Makefile.in  conjugate_gradient.C
bfm/tests/dwf_cg_nochroma/: Makefile.in  conjugate_gradient.C
bfm/tests/dwf_deflated_cg/: Makefile.in  call_dslash.C  call_dslash.C2
bfm/tests/dwf_eigen_4d/: Makefile.am  Makefile.in  call_dslash.C
bfm/tests/dwf_eigen_5d/: Makefile.in  call_dslash.C
bfm/tests/dwf_firmware_cg/: Makefile.in  call_dslash.C  prepare.sh  prepare.sh.in
bfm/tests/dwf_firmware_singlenode/: Makefile.in  call_dslash.C  prepare.sh  prepare.sh.in
bfm/tests/dwf_mooee/: Makefile.in  call_dslash.C
bfm/tests/dwf_mooeeinv/: Makefile.in  call_dslash.C
bfm/tests/dwf_nochroma/: Makefile.in  call_dslash.C
bfm/tests/dwf_prec/: Makefile.in  call_dslash.C
bfm/tests/dwf_rb5d/: Makefile.in  call_dslash.C
bfm/tests/dwf_rb5d_cg/: Makefile.in  call_dslash.C
bfm/tests/dwf_rb5d_cg_threaded/: Makefile.in  call_dslash.C
bfm/tests/dwf_rb5d_cg_threaded_spi/: Makefile.in  call_dslash.C
bfm/tests/dwf_rb5d_comms/: Makefile.in  call_dslash.C
bfm/tests/dwf_rb5d_dperp/: Makefile.in  call_dslash.C
bfm/tests/dwf_rb5d_multishift/: Makefile.in  call_dslash.C
bfm/tests/dwf_rb5d_prop/: Makefile.in  call_dslash.C
bfm/tests/dwf_rb5d_unprec/: Makefile.in  call_dslash.C
bfm/tests/dwf_rb5d_unprec_spi/: Makefile.in  call_dslash.C
bfm/tests/dwf_singlenode/: Makefile.in  call_dslash.C
bfm/tests/eguchi_kawamoto/: Makefile.in  call_dslash.C
bfm/tests/eguchi_kawamoto_cg/: Makefile.in  call_dslash.C
bfm/tests/general_5d_cg/: Makefile.in  call_dslash.C
bfm/tests/general_5d_cg_prec/: Makefile.am  Makefile.in  call_dslash.C
bfm/tests/general_5d_deltaL/: Makefile.in  call_dslash.C
bfm/tests/general_5d_deltaL_nersc/: Makefile.in  call_dslash.C
bfm/tests/general_5d_forceterm/: Makefile.am  Makefile.in  call_dslash.C
bfm/tests/general_5d_init_test/: Makefile.in  call_dslash.C
bfm/tests/general_5d_mprec/: Makefile.in  call_dslash.C
bfm/tests/general_5d_mres/: Makefile.in  call_dslash.C
bfm/tests/general_5d_munprec/: Makefile.in  call_dslash.C
bfm/tests/ibm_qcd_qpx_diag/: Makefile.am  Makefile.in  conjugate_gradient.C
bfm/tests/inexact_deflation/: Makefile.am  Makefile.in  call_dslash.C  littleDiracOp.C  littleDiracOp.h  testLittleDiracOp.C
bfm/tests/inexact_deflation_qdp/: Makefile.in  call_dslash.C  littleDiracOp.C  littleDiracOp.h  testLittleDiracOp.C
bfm/tests/linalg/: Makefile.in  call_dslash.C
bfm/tests/majority_vote/: Makefile.am  Makefile.in  majority_vote.C
bfm/tests/su3/: Makefile.in  call_dslash.C
bfm/tests/wilson/: Makefile.am  Makefile.in  call_dslash.C
bfm/tests/wilson_cg/: Makefile.am  Makefile.in  conjugate_gradient.C
bfm/tests/wilson_cg_threaded/: Makefile.in  call_dslash.C
bfm/tests/wilson_firmware_singlenode/: Makefile.am  Makefile.in  call_dslash.C  errno.c  prepare.sh  prepare.sh.in
bfm/tests/wilson_nochroma/: Makefile.am  Makefile.in  call_dslash.C
(+45 files in other folders)
